testsuite/tests/properties/invalid_memoized/test.out
== foo.lkt ==
foo.lkt:15:25: error: This property cannot be memoized because argument a (of type Array[Token]) is not hashable
15 |     @exported @memoized fun prop(a: Array[Token]): Bool = a.length() == 0
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
